# Linux_lab05

./: .gitmodules  CMakeLists.txt
.github/workflows/: github-actions.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake  equation  hello_world
_build/Testing/Temporary/: CTestCostData.txt
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/solver_lib/: Makefile  cmake_install.cmake
banking/: Transaction.h
testing/: mock_class.cpp  test.cpp
tests/: AccountTest.cpp  CMakeList.txt  TransactionTest.cpp  mock.cpp  test.cpp  test1.cpp
